fixed the cards; center no of attenedees and truncated text

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ a {
   color: var(--secondary-text-color);
   background-color: var(--primary-bg-color);
   border: solid var(--secondary-text-color);
+  cursor: pointer;
 }
 
 .nav-text.active {
@@ -78,7 +79,11 @@ a {
 }
 
 .nav-text li {
-  padding: 2px 0;
+  padding: 12px 0;
+}
+
+.nav-text li :hover {
+  font-weight: 900;
 }
 
 .hamburger {
@@ -181,7 +186,7 @@ a {
 .filter-container::after {
   content: "";
   position: absolute;
-  top: 17px;
+  top: 13px;
   right: 2px;
   background-image: url("images/rightarrow.svg");
   width: 20px;
@@ -209,6 +214,14 @@ a {
   min-width: 193px;
   position: relative;
   z-index: 1;
+  border: none;
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
+  font-size: 15px;
+  cursor: pointer;
+}
+.menu-filter :hover {
+  color: red;
 }
 
 .toggle-wrapper {
@@ -304,13 +317,19 @@ input[type="checkbox"] {
   width: 100%;
   height: 40px;
   margin: 0 -9px;
-  position: relative;
 }
-
+/*
 .attendee-number {
   position: absolute;
   left: 76%;
   bottom: -4px;
+}
+*/
+
+.attendee-number {
+  position: relative;
+  left: -22px;
+  bottom: 4px;
 }
 
 /**********APPLY************/
@@ -371,6 +390,7 @@ input[type="checkbox"] {
   width: 60px;
   height: 60px;
   margin-bottom: 32px;
+  cursor: pointer;
 }
 
 .nav-bottom {
@@ -393,6 +413,7 @@ input[type="checkbox"] {
 .social-media-symbol {
   width: 16px;
   height: 16px;
+  cursor: pointer;
 }
 
 .external-link-symbol {
@@ -414,6 +435,7 @@ input[type="checkbox"] {
   align-items: center;
   justify-content: center;
   max-height: 44px;
+  cursor: pointer;
 
   &._primary {
     color: var(--primary-text-color);
@@ -479,6 +501,10 @@ input[type="checkbox"] {
     border: none;
   }
 
+  .nav-text :hover {
+    font-weight: 900;
+  }
+
   .nav-text li {
     padding: 5px 23px;
   }
@@ -491,6 +517,7 @@ input[type="checkbox"] {
   .image-logotype-dydx {
     height: 72px;
     width: 120px;
+    cursor: pointer;
   }
 
   /**********MID-SECTION************/
